k8s/06-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: joyna
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: europe-north2-docker.pkg.dev/joyna-505918/joyna/api:e220a8d
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            periodSeconds: 5
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
          ports:
            - containerPort: 8080
