k8s/03-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: joyna
spec:
  clusterIP: 'None'
  selector:
    app: postgres
  ports:
    - port: 5432
      name: pg
