k8s/07-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: joyna
spec:
  selector:
    app: api
  ports:
    - port: 8080
      name: api
