k8s/09-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: joyna
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      name: frontend
