k8s/10-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dev-gw
  namespace: joyna
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
    - protocol: HTTP
      port: 80
      name: dev-gw-listener
      allowedRoutes:
        namespaces:
          from: Same
